# physical-ai-jetson-robotics

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md  __init__.py
agents/ops_copilot/: README.md  __init__.py  copilot.py
docs/: ARCHITECTURE.md  LEROBOT_ALOHA.md  SIMULATION_ALTERNATIVES.md  VENDOR_INTEGRATION_MAP.md  architecture.md  evidence_standard.md
docs/diagrams/: data-flow.mmd  deployment-view.mmd  runtime-flow.mmd  system-architecture.mmd
isaac/: README.md
isaac/scripts/: render_factory_cell.py  render_factory_cell_blender.py
isaac/usd/: factory_cell_v0.usda
isaac/usd/robots/yahboom-rosmaster-m3-pro/: export_meshes.py
lerobot/: README.md
lerobot/configs/: synria_aloha_act_notes.yaml
physical_ai_lab/: cli.py  config.py  inventory.py  mission.py  ops_copilot.py
projects/jetson-edge-ai-security/: README.md
projects/jetson-edge-ai-security/src/jetson_edge_ai_security/: cli.py
reports/: README.md  progress.json
reports/agents/ops_copilot/: latest.json
reports/isaac/: 2026-05-14-linux-rtx-openusd-bringup.md
reports/jetson/: README.md  sample_metrics_schema.json
reports/robotics/: README.md
reports/simulation/: BRINGUP_TEMPLATE.md
reports/synria/: BRINGUP_TEMPLATE.md
reports/yahboom/: BRINGUP_TEMPLATE.md
ros2_ws/: README.md
ros2_ws/src/physical_ai_description/: CMakeLists.txt  package.xml
ros2_ws/src/physical_ai_description/urdf/: mobile_manipulator_proxy.urdf.xacro
ros2_ws/src/physical_ai_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/physical_ai_gazebo/launch/: factory_cell.launch.py
ros2_ws/src/physical_ai_gazebo/worlds/: factory_cell.sdf
ros2_ws/src/rosmaster_m3pro_description/: CMakeLists.txt  package.xml
ros2_ws/src/rosmaster_m3pro_description/launch/: display.launch.py
ros2_ws/src/rosmaster_m3pro_description/meshes/: mecanum_wheel.stl  mecanum_wheel_cad.stl
ros2_ws/src/rosmaster_m3pro_description/rviz/: display.rviz
ros2_ws/src/synria_arm_description/: CMakeLists.txt  package.xml
ros2_ws/src/synria_arm_description/launch/: display.launch.py
ros2_ws/src/synria_arm_description/rviz/: synria_arm.rviz
ros2_ws/src/synria_arm_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/synria_arm_gazebo/config/: ros2_controllers.yaml
ros2_ws/src/synria_arm_gazebo/launch/: control.launch.py
ros2_ws/src/synria_arm_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/synria_arm_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  synria_arm.srdf
ros2_ws/src/synria_arm_moveit_config/launch/: demo.launch.py
scripts/linux_rtx/: bootstrap.sh  check_lerobot.sh  render_factory_cell.sh  render_factory_cell_blender.sh  smoke_robot_descriptions.sh  smoke_ros2_simulation.sh
tests/: test_agents_ops_copilot.py  test_inventory.py  test_simulation_foundation.py
(+8 files in other folders)
