<?xml version="1.0"?>
<package format="3">
  <name>physical_ai_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic worlds and launches for the Physical AI mobile manipulation lab.</description>
  <maintainer email="oedeh@example.com">oedeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>physical_ai_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
