<?xml version="1.0"?>
<package format="3">
  <name>synria_arm_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo and ros2_control bringup for the approximate Synria 6DOF arm.</description>
  <maintainer email="oedeh@example.com">oedeh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>synria_arm_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
